--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Ali Mojabi</h1>
-									<p>Congradulations! You've landed on my <strong>Github Pages</strong> site. Unfortunately, it's currently under construction. Check back soon for updates.</p>
+									<p>Congradulations! You've landed on my <strong>Github Pages</strong> site. Unfortunately, it's currently under construction. Check back soon for updates! </p>
+									<p>In the meantime, I'm available by email: <a href = "mailto: ali@mojabi.com">ali@mojabi.com</a> </p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
